[package]
name = "rust-net-learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
    "tcpserver",
    "tcpclient",
    "udpserver",
    "udpclient",
    "ipaddr",
    "socketaddr",
    "ipnet",
    "use_mio",
    "use_pnet",
    "use_dns",
    "use_serde",
    "use_build",
    "use_grpc",
    "use_lettre"
]