[package]
name = "use_serde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.106", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.8"

[[bin]]
name = "server"
path = "src/server/bin/main.rs"

[[bin]]
name = "client"
path = "src/client/bin/main.rs"